<resources>
    <string name="app_name">Freight Shipper</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="forgot_password">Forgot username or password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_dot">Sign up.</string>

    <string name="not_implemented">Not implemented</string>
    <string name="default_api_error">Default Api Error</string>
    <string name="otp">OTP</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="reset_password">Reset Password</string>
    <string name="signup_as_a_company">Signup as a Company</string>
    <string name="signup_as_an_individual">Signup as an Individual</string>
    <string name="company">Company</string>
    <string name="company_details">Company Details</string>
    <string name="company_name">Company Name</string>
    <string name="company_address">Company Address</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city_suburb">City/Suburb</string>
    <string name="postal_code">Postal Code</string>
    <string name="phone_number">Phone Number</string>
    <string name="next">Next</string>
    <string name="contact_person_details">Contact Person Details</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="signup">Signup</string>
    <string name="registration_number">Registration Number</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="add">Add</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="add_new_load">Add New Load</string>
    <string name="new_load">New Load</string>
    <string name="pickup_and_drop">Pickup and drop?</string>
    <string name="pickup">Pickup</string>
    <string name="change">Change</string>
    <string name="drop">Drop</string>
    <string name="distance_colon">Distance:</string>
    <string name="eta_colon">ETA: </string>
    <string name="pickup_address_colon">Pickup Address:</string>
    <string name="drop_address_colon">Drop Address:</string>
    <string name="pickup_date_star">Pickup Date*</string>
    <string name="drop_date_star">Drop Date*</string>
    <string name="select_your_vehicle_type">Select your vehicle type?</string>
    <string name="capacity_colon">Capacity:</string>
    <string name="who_is_the_sender">Who is the sender?</string>
    <string name="receiver_name">Receiver Name</string>
    <string name="forgot_password_message">Don\'t worry! Enter your valid email address below to request a password
        reset.
    </string>
    <string name="emai_empty_error">Email is empty</string>
    <string name="no_load_available">No load available</string>
    <string name="failed_to_fetch_load">Failed to fetch loads</string>
    <string name="active">Active</string>
    <string name="past">Past</string>
    <string name="customer_name">Customer Name</string>
    <string name="goods_colon">Goods:</string>
    <string name="you_ll_receive">You\'ll Receive</string>
    <string name="dollar">$</string>
    <string name="paid_by">Paid by</string>
    <string name="time_left_for_pickup">Time left for pickup</string>
    <string name="start">Start</string>
    <string name="completed">Completed</string>
    <string name="logout">Logout</string>
    <string name="payment_detail">Payment Detail</string>
    <string name="bank_account_number">Bank Account Number</string>
    <string name="bank_name">Bank Name</string>
    <string name="bank_address">Bank Address</string>
    <string name="wire_transfer_number">Wire Transfer Number</string>
    <string name="currency">Currency</string>
    <string name="payment_detail_added_success_msg">Payment detail submitted successfully</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="vehicle_name">Vehicle Name</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="length">Length</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="weight_capacity">Weight (Capacity)</string>
    <string name="number_plat">Number Plat</string>
    <string name="select_vehicle_type">Select Vehicle Type</string>
    <string name="error_uploading_vehicle_images">Error on uploading vehicle images</string>
    <string name="only_images_are_allowed">Only three images are allowed</string>
    <string name="vehicle_added_success_message">Vehicle added successfully</string>
    <string name="add_vehicle_error">Error while adding vehicle</string>
    <string name="add_shipper">Add Shipper</string>
    <string name="shipper_added_success_message">Shipper added successfully</string>
    <string name="select_country">Select country</string>
    <string name="select_state">Select state</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="assiged_load">Assigned Load</string>
    <string name="vehicle">Vehicle</string>
    <string name="select_vehicle">Select vehicle</string>
    <string name="counter">Counter</string>
    <string name="accept">Accept</string>
    <string name="counter_price">Counter Price</string>
    <string name="note_offers_once_accepted_by_both_parties_cannot_be_changed_later">Note - Offers once accepted by both parties cannot be changed later</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="counter_price_enter_error">Please enter counter price</string>
    <string name="offer_update_message">Offer price updated successfully</string>
    <string name="error_updating_offer_price">Error while updating offer price</string>
    <string name="upload_document">Upload Document</string>
    <string name="type_colon">Type:</string>
    <string name="vehicle_list">Vehicle List</string>
    <string name="inactive">Inactive</string>
    <string name="no_vehicles_available">No vehicles available</string>
    <string name="no_drivers_available">No drivers available</string>
    <string name="shipper_list">Shipper list</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="offered_price">Offered Price</string>
    <string name="username_or_password_empty_error">Username or Password is empty</string>
    <string name="title_activity_route1">Map</string>
    <string name="arrived_pickup">Arrived Pickup</string>
    <string name="arrived_at_pickup">Arrived at Pickup</string>
    <string name="no_location_detected">No location detected</string>
    <string name="settings">Location Setting</string>
    <string name="permission_denied_explanation">Allow location permission from the setting</string>
    <string name="permission_rationale">Location Permission</string>
    <string name="arrived_destination">Arrived Destination</string>
    <string name="arrived_at_destination">Arrived at Destination</string>
    <string name="sender_information">Sender Information</string>
    <string name="load_id_colon">Load id :</string>
    <string name="receiver_information">Receiver Information</string>
    <string name="receiver_signature">Receiver Signature</string>
    <string name="documents">Documents</string>
    <string name="address_colon">Address :</string>
    <string name="booking_date_colon">Booking Date :</string>
    <string name="delivery_date_colon">Delivery Date :</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="save">Save</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update_profile_msg">Profile updated successfully.</string>
    <string name="no_rout_found">No route found</string>
    <string name="cancelled">Cancelled</string>
    <string name="cannot_take_sign">Cannot take signature</string>
    <string name="does_nt_support_navigation">Handset does not support Navigation</string>
    <string name="pickup_location_null_error">Pickup location is null</string>
    <string name="destination_location_null_error">Destination location is null</string>
    <string name="clear_filter">Clear Filter</string>
    <string name="distance">Distance</string>
    <string name="_100_km">100 Km</string>
    <string name="_0_km">0 Km</string>
    <string name="weight">Weight</string>
    <string name="weight_in_ton">Weight (in Ton)</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="apply">Apply</string>
    <string name="all_fields_mandatory_error">All fields are mandatory.</string>
    <string name="load_accept_success_message">Load accepted successfully</string>
    <string name="error_price_not_valid">Price is not valid</string>
    <string name="ok">OK</string>
    <string name="alert_title">Alert!!</string>
    <string name="invoice_success_message">Invoice submitted successfully. You can check this in Past Load screen.</string>
    <string name="offer_success_message">Your offer is successfully sent to customer. You can see this Booking in Active Loads once customer accepts your offer.</string>
    <string name="invoice">Invoice</string>
</resources>
