<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <EditText
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:gravity="center"
        android:hint="@string/counter_price"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_30dp" />

    <TextView
        style="@style/TextView.Body.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10dp"
        android:gravity="center"
        android:text="@string/note_offers_once_accepted_by_both_parties_cannot_be_changed_later" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonCancel"
            style="@style/Material.Button.Gray"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_3dp"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/buttonConfirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_3dp"
            android:layout_weight="1"
            android:text="@string/confirm" />
    </LinearLayout>

</LinearLayout>