<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/distanceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/distance"
            style="@style/TextView.Heading" />

        <TextView
            android:id="@+id/distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/distanceKm"
            android:layout_marginEnd="@dimen/_5dp"
            android:layout_alignBottom="@+id/distanceLabel"
            android:text="0"
            style="@style/TextView.Heading.XXS" />

        <TextView
            android:id="@+id/distanceKm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignBottom="@+id/distanceLabel"
            android:text="Km"
            style="@style/TextView.Heading.XXS" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/distanceSeek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/distanceLabel"
            android:layout_marginTop="@dimen/_5dp"
            android:layout_marginBottom="@dimen/_5dp"
            android:max="100" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/distanceSeek"
            android:layout_alignParentEnd="true"
            android:text="@string/_100_km"
            style="@style/TextView.Body.Small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/distanceSeek"
            android:text="@string/_0_km"
            style="@style/TextView.Body.Small" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/weight_in_ton"
            style="@style/TextView.Heading" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5dp"
                android:layout_marginStart="@dimen/_5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etWeightF"
                    style="@style/Material.EditText"
                    android:hint="@string/from"
                    android:inputType="number"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5dp"
                android:layout_marginEnd="@dimen/_5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etWeightT"
                    style="@style/Material.EditText"
                    android:hint="@string/to"
                    android:inputType="number"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/buttonApply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apply"
        style="@style/Material.Button"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginBottom="@dimen/_10dp" />

</LinearLayout>